[tool.poetry]
name = "garden-cli"
version = "0.0.1"
description = "The command line interface to build Gardens"
authors = ["Owen Price Skelly", "Will Engler", 
           "Ben Galewsky", "KJ Schmidt", "Aristana Scourtas", 
           "Eric Blau", "Ben Blaiszik <blaiszik@uchicago.edu>"]
readme = "README.md"
packages = [{include = "garden-cli"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
garden-ai = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 
